# nmea-mqtt-py

./: .gitignore  AGENTS.md  README.md  TODO.md  changelog.md  config_sample.py  config_sample.toml  duckdb_services.py  main.py  pyproject.toml  requirements.txt  test_units.py  utilities.py
decoders/: gga.py  gll.py  gsv.py  hdt.py  mda.py  mwv.py  rmc.py  rsa.py  vtg.py  vwr.py
parse_nmea/: __init__.py
parse_nmea/decoders/: dpt.py  gga.py  gll.py  hdt.py  mda.py  mwv.py  rmc.py  rot.py  rsa.py  vlw.py  vtg.py  vwr.py
simulator/: README.md  simulate.py
src/: duckdb_services.py  main.py  mqtt_services.py  service_utils.py
src/parse_nmea/decoders/: dpt.py  gga.py  hdt.py  mwv.py  rmc.py  vtg.py  vwr.py
systemd/: nmea-logger.service  nmea-mqtt.service  nmea_mqtt.service
tests/: test_duckdb.py  test_influxdb.py  test_mqtt.py  test_quack.py  test_units.py
