[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmea-mqtt-py"
version = "1.4.0"
authors = [
  { name="Tom Keffer", email="tkeffer@gmail.com" },
]
description = "Read NMEA 0183 sentences from one or more sockets, parse them, then publish to InfluxDB and MQTT"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paho-mqtt",
    "duckdb",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
"Homepage" = "https://github.com/westernflyer/nmea-mqtt-py"

[project.scripts]
nmea-mqtt = "main:run"

[tool.setuptools]
py-modules = ["main"]
packages = ["parse_nmea", "parse_nmea.decoders"]
