[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmea-logger-py"
version = "1.7.0"
authors = [
  { name="Tom Keffer", email="tkeffer@gmail.com" },
]
description = "Read NMEA 0183 sentences from one or more sockets, parse them, then publish to DuckDB and MQTT"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "paho-mqtt",
    "duckdb>=1.5.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
"Homepage" = "https://github.com/westernflyer/nmea-logger-py"

[project.scripts]
nmea-logger = "main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
